// Copyright (c) 2010 Bing Jiang
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

// Author: Bing Jiang
// Date: 11-24-2010
// The connection between Server and Client. 

package com.klose;

option java_package = "com.klose";
option java_outer_classname = "MsConnProto";

message Request {
  required string str_data = 1;
}

message Response {
  required string str_data = 1;
  optional int32 int_data = 2;
}
message SlaveRegisterRequest {
	required string ip_port = 1;
	optional int32 state = 2;
}
message SlaveRegisterResponse {
	required bool isSuccess = 1;
}
service TestService {
  rpc TestMethod(Request) returns(Response);
}
service RegisterSlaveService {
  rpc SlaveRegister(SlaveRegisterRequest) returns (SlaveRegisterResponse); 
}
